fix: Resolve EKS EC2/EBS data not saving to database